# ai-content-automation

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/rules/: backend-python.mdc  core-ai-standards.mdc  docker-compose-ops.mdc  frontend-react.mdc  git-collaboration.mdc  security-config.mdc
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_m1_topic_raw_topic_canonical.py  0002_m2_content_job_content_asset.py  0003_m2_review_publish_package.py  0004_m3_topic_rule_evaluation.py
backend/src/: main.py
backend/src/api/v1/: deps.py
backend/src/api/v1/routers/: health.py  jobs.py  metrics.py  packages.py  review.py  topics.py
backend/src/api/v1/schemas/: content.py
backend/src/application/services/: normalizer.py  rule_engine.py
backend/src/infrastructure/db/: __init__.py  celery_async.py  models.py  session.py
backend/src/infrastructure/mq/: celery_app.py
backend/src/infrastructure/observability/: __init__.py  alerting.py  logging_config.py  redis_counters.py
backend/src/workers/: celery_app.py
backend/src/workers/tasks/: generation.py  ingestion.py  packaging.py
docs/: superpower+openspec.drawio  需求.md
docs/superpowers/specs/: 2026-04-14-ai-content-automation-mvp-design.md
docs/开发规则/: 01-Harness-Engineering.md  02-OpenSpec.md  03-Superpower.md  04-Cursor-Rule.md  README.md
docs/部署/: 部署.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
openspec/: config.yaml
openspec/changes/ai-content-automation-mvp/: design.md  (+2 more)
(+4 files in other folders)
